--- a/35-2_Ayrapetov_NN/35-2_Ayrapetov_NN.csproj
+++ b/35-2_Ayrapetov_NN/35-2_Ayrapetov_NN.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="ModelNN\EnumsNN.cs" />
     <Compile Include="ModelNN\HiddenLayer.cs" />
     <Compile Include="ModelNN\InputLayer.cs" />
     <Compile Include="ModelNN\Neuron.cs" />
