--- a/35-2_Ayrapetov_NN/35-2_Ayrapetov_NN.csproj
+++ b/35-2_Ayrapetov_NN/35-2_Ayrapetov_NN.csproj
@@ -55,6 +55,8 @@
     <Compile Include="ModelNN\EnumsNN.cs" />
     <Compile Include="ModelNN\HiddenLayer.cs" />
     <Compile Include="ModelNN\InputLayer.cs" />
+    <Compile Include="ModelNN\Layer.cs" />
+    <Compile Include="ModelNN\Network.cs" />
     <Compile Include="ModelNN\Neuron.cs" />
     <Compile Include="ModelNN\OutputLayer.cs" />
     <Compile Include="Program.cs" />
